chore: update Jenkinsfile and pom.xml to use java 21