@@ -440,14 +440,9 @@
         <version>${mockito.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-inline</artifactId>
-        <version>${mockito.version}</version>
-      </dependency>
-      <dependency>
         <groupId>org.easymock</groupId>
         <artifactId>easymock</artifactId>
-        <version>3.0</version>
+        <version>5.5.0</version>
       </dependency>
       <dependency>
         <groupId>org.xmlunit</groupId>
@@ -790,8 +785,8 @@
   <packaging>pom</packaging>
 
   <properties>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jetty.version>9.4.56.v20240826</jetty.version>
     <lucene.version>3.5.0</lucene.version>
@@ -804,7 +799,7 @@
     <log4j.version>2.20.0</log4j.version>
     <dom4j.version>2.1.4</dom4j.version>
     <hsqldb.version>2.7.1</hsqldb.version>
-    <mockito.version>5.2.0</mockito.version>
+    <mockito.version>5.15.2</mockito.version>
     <unboundid-ldapsdk.version>2.3.5</unboundid-ldapsdk.version>
     <jsr305.version>3.0.2</jsr305.version>
     <error_prone_annotations.version>2.3.2</error_prone_annotations.version>
@@ -945,6 +940,7 @@
             <argLine>@{argLine} -Dserver.dir=${project.basedir}
               -Dzimbra.config=${project.basedir}/src/test/resources/localconfig-test.xml
               -Dfile.encoding=UTF-8 -Djava.locale.providers=COMPAT,SPI
+              -Djava.security.manager=allow
             </argLine>
             <excludes>
               <!-- Exclude qa -->
@@ -987,7 +983,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.8</version>
+          <version>0.8.12</version>
           <executions>
             <execution>
               <goals>
@@ -1006,7 +1002,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
-          <version>3.3.0</version>
+          <version>3.8.0</version>
           <executions>
             <execution>
               <id>analyze</id>
